syntax = "proto3";
option csharp_namespace = "YouTube.Proto";

service ChatService {
  rpc JoinChat (JoinChatRequest) returns (JoinChatResponse);
  rpc SendMessage (SendMessageRequest) returns (SendMessageResponse);
  rpc MessageStream (JoinChatRequest) returns (stream ChatMessageResponse);
}

message JoinChatRequest {
  string user_id = 1;
  optional string chat_id = 2;
}

message JoinChatResponse {
  string user_id = 1;
  string chat_id = 2;
}

message SendMessageRequest {
  string chat_id = 1;
  string user_id = 2;
  string message = 3;
}

message SendMessageResponse {
  bool success = 1;
}

message ChatMessageResponse {
  string message_id = 1;
  string user_id = 2;
  string message = 3;
  string date = 4;
  string time = 5;
  bool is_read = 6;
}